--- a/block-BJaaed/code/style.css
+++ b/block-BJaaed/code/style.css
@@ -133,5 +133,34 @@ header {
     background: #367e80;
     padding: 1.5rem 0;
 }
+ul{
+    background: #fdf4e7;
+    padding: 2rem 3rem;
+    flex-wrap: wrap;
+}
 
-
+li{
+    width : 30%;
+    text-align: center;
+    background-color: white;
+    padding: 1rem 0;
+    margin: 1rem;
+}
+h2{
+    font-size: 1.2rem;
+    font-weight: 600;
+}
+p{
+    font-size: 0.8rem;
+    padding: 0.5rem ;
+}
+img{
+    width: 50%;
+}
+button{
+    color : white;
+    background-color: #347f80;
+    border-radius: 5px;
+    padding: 5px 10px;
+    border: 0px;
+}
